[gd_scene load_steps=3 format=3 uid="uid://bf1ak3gum6bls"]

[ext_resource type="Script" uid="uid://c2janl8vmmvb4" path="res://board/board.gd" id="1_5c38k"]
[ext_resource type="PackedScene" uid="uid://b1guwc5a7wewd" path="res://board/bottom/BottomNode.tscn" id="2_k4dee"]

[node name="Board" type="Node"]
script = ExtResource("1_5c38k")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0392157, 0.0392157, 0.0588235, 1)

[node name="PopupPanel" type="PopupPanel" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 133.0
offset_bottom = 96.0

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"

[node name="HBoxContainer" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="PopupPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "RESTART"

[node name="BackButton" type="Button" parent="PopupPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "BACK"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="tileBoard" type="Node" parent="VBoxContainer"]

[node name="BottomNode" parent="VBoxContainer" instance=ExtResource("2_k4dee")]
layout_mode = 2
